kubernetes/apps/database/rabbitmq/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-dashboard
spec:
  ingressClassName: internal
  rules:
    - host: rabbitmq.serek.xyz
      http:
        paths:
          - backend:
              service:
                name: emqx-dashboard
                port:
                  number: 15672
            path: /
            pathType: Prefix
